--- a/css/style.css
+++ b/css/style.css
@@ -354,16 +354,7 @@ nav ul li a:hover:after {
     color: #0e0f10;
     font-size: 12px;
     margin-right: 8px;
-}
-
-#product .producr_item .item p::before {
-    width: 38px;
-    height: 1px;
-    background: #0e0f10;
-    position: absolute;
-    top: 10px;
-    left: 35%;
-    content: "";
+    text-decoration: line-through;
 }
 
 #product .producr_item .item p::after {
@@ -529,7 +520,6 @@ nav ul li a:hover:after {
 
 #facilities .item {
     text-align: center;
-    width: 25%;
     padding: 50px 0;
 }
 
